# rotterdam-the-hague-airport-pipeline

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  output.csv  output_2.csv  pyproject.toml
containers/: awsglue.dockerfile  docker-compose.yml
servicesetup/: athena_query_arrivals.sql  athena_query_departures.sql  combine_tables_with_athena.sql  flight_schema.json  weather_schema.json
src/ETL/: flight_data.py  flight_data_etl.py  weather_data_etl.py
src/data_pull/: exceptions.py
src/data_pull/flights/: fetch_flights.py
src/data_pull/lambdas/: fetch_flights.py  fetch_weather.py
src/data_pull/weather/: aiport_loc.py  fetch_weather.py
src/glue/: main.py
src/glue/tasks/: __init__.py  common.py  jobs.py
src/glue/tasks/jobs/: __init__.py  flight_data.py  weather_data.py
src/utils/: exceptions.py  logger.py
terraform/: .terraform.lock.hcl  main.tf  output.tf  variable.tf
terraform/analyze/: merge_tables.tf  variable.tf
terraform/data_pull/: .terraform.lock.hcl  flight_data_pull.tf  lambda_iam.tf  output.tf  variable.tf  weather_data_pull.tf
terraform/etl/: data_catalog.tf  jobs.tf  output.tf  variable.tf
terraform/etl/jobs/: flight_job.tf  jobs.tf  weather_job.tf
tests/integration/: test_fetch_flight_info.py  test_fetch_weather_info.py
tests/unit/: response.text  test_fetch_flight_info.py  test_fetch_weather_info.py
tests/unit/ETL_jobs/: test_fligh_data_etl.py
tests/unit/ETL_jobs/flight_data/: departures_data_1.json  departures_data_2.json  test_fligh_data_etl.py
tests/unit/ETL_jobs/weather_data/: test_weather_data_etl.py  weather_data_1.json  weather_data_2.json
tests/unit/data_pull/: test_fetch_flight_info.py  test_fetch_weather_info.py
tests/unit/glue/flight_data/: departures_data_1.json  test_fligh_data_etl.py
tests/unit/glue/weather_data/: test_weather_data_etl.py  weather_data_1.json  weather_data_2.json
