[tool.poetry]
name = "rotterdam-the-hague-airport-pipeline"
version = "0.1.0"
description = ""
authors = ["wvanelteren <wvanelteren@gmail.com>"]
readme = "README.md"
packages = [{ include = "rotterdam_the_hague_airport_pipeline" }]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
requests = "^2.28.1"
python-dotenv = "^0.21.0"
boto3 = "^1.26.13"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
isort = "^5.10.1"
black = "^22.10.0"
mypy = "^0.991"
autoflake = "^1.7.7"
pre-commit = "^2.20.0"

[tool.isort]
# make it compatible with black
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
